# KAGMapMakerv2

./: .gitignore  .pylintrc  BlockSelector.py  Canvas.py  CanvasSettings.py  Canvas_old.py  EscapeMenu.py  Image.py  KagColor.py  KagImage.py  README.md  Tile.py  app.py  canvas.py  config.json  install.bat  install.sh  kagmapmaker.py  listallitems.py  mainwindow.py  pyproject.toml  readonly_config.json  requirements.txt  run.bat  run.sh  tilestoadd.txt  todo.txt  todolist.txt
.github/workflows/: build.yml  pylint.yml
.scripts/: pyinstaller.py
Modded/Testmod/: item.json  item2.json
Modded/_ExampleMod/: cblob_template.json  ctile_template.json
Sprites/MapMaker/: desktop.ini
base/: Bloblist.txt  CBlob.py  CBlobList.py  CColor.py  CTile.py  CTileList.py  ImageHandler.py  KagColor.py  KagImage.py  MapMaker_Autostart.as  Renderer.py  Tile.py  TileList.py  _kag_image.py  cblob.py  cblob_list.py  citem.py  citemlist.py  ctile.py  ctile_list.py  custom_items.py  image_handler.py  kag_color.py  kag_image.py  renderer.py
base/Items/: blobs.json  merge_items.json  others.json  tiles.json
base/Sprites/: TileList.py
core/: canvas.py  canvas_grid_manager.py  canvas_history_manager.py  commands.py  communicator.py  gui_module_handler.py  renderer_render_overlays.py  toolbar.py  window_config_handler.py
core/Canvas/: canvas.py  canvas_history_manager.py  (+1 more)
settings/: config.json  readonly_config.json
temp_ui_files/: test.ui
utils/: config.py  config_handler.py  file_handler.py  input.py  mainconfig.py  vec.py  vec2f.py  window.py  windowsettings.py
(+28 files in other folders)
